--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,19 @@
+body, html {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  font-family: 'Helvetica Neue', Arial, sans-serif;
+  background-color: #f0f4f8;
+}
+
 .App {
   display: flex;
   flex-direction: column;
   align-items: center;
-  font-family: 'Helvetica Neue', Arial, sans-serif;
-  background-color: #f0f4f8;
-  height: 100vh;
-  padding: 50px;
+  min-height: 100vh;
+  padding: 50px 0;
 }
+
 
 h1 {
   font-size: 2.5em;
@@ -36,3 +43,77 @@ h1 {
   padding: 10px;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
 }
+
+.recent-searches {
+  margin-top: 20px;
+}
+
+.recent-searches h2 {
+  display: flex;
+  justify-content: center;
+  font-size: 1.5em;
+  margin-bottom: 10px;
+}
+
+.recent-searches ul {
+  list-style-type: none;
+  padding: 0;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 10px;
+  justify-content: center;
+  color:#fff;
+}
+
+.recent-searches li {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+  width: 200px;
+  height: 150px;
+  padding: 10px 15px;
+  border: 1px solid #ccc;
+  border-radius: 15px;
+  background-color: #f8f8f8;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+  transition: background-color 0.3s ease, box-shadow 0.3s ease;
+}
+
+.recent-searches li:hover {
+  background-color: #e0e0e0;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+}
+
+.recent-searches img {
+  width: 40px;
+  height: 40px;
+}
+
+.recent-searches li .temperature {
+  font-weight: bold;
+  font-size: 1.2em;
+  margin-top: 5px;
+}
+
+.recent-searches li .background {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-size: cover;
+  background-position: center;
+  border-radius: 15px;
+  opacity: 0.2;
+  z-index: -1;
+}
+
+.loading-spinner{
+  width: 50px;
+  height: 50px;
+  margin-top: 20px;
+}
+
